# paper-forge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: paper-analyze.md  paper-build.md  paper-diagrams.md  paper-figures.md  paper-forge.md  paper-generate.md  paper-literature.md  paper-qa.md  paper-review.md
examples/sample_project/: paper_spec.yaml
paper_forge/: __init__.py  cli.py  experiment_collector.py  figure_engine.py  latex_builder.py  models.py  pdf_builder.py  pipeline.py  text_generator.py
paper_forge/web/: app.py
paper_forge/web/static/css/: editor.css
paper_forge/web/static/js/: editor.js
paper_forge/web/templates/: base.html  editor.html  index.html
paperclaw/: __init__.py  auto_figure.py  cli.py  doc_extractor.py  latex_builder.py  models.py  pipeline.py  text_generator.py
paperclaw/agents/: __init__.py  citation_checker.py  content_reviewer.py  figure_checker.py  literature_agent.py  structure_reviewer.py
paperclaw/assets/: color_palettes.json
paperclaw/skills/: __init__.py  auto_figure.py  base.py  latex_gen.py  orchestrator.py  pdf_compile.py  qa_citations.py  qa_figures.py  qa_structure.py  registry.py  spec_parser.py
paperclaw/web/: app.py
paperclaw/web/static/css/: editor.css
paperclaw/web/static/js/: editor.js
paperclaw/web/templates/: base.html  editor.html  index.html
